[v9r1p19]
use DIRAC v6r19p24

* returning the error message
* autopep8
* added try/except for incomplete requests
* fix for NoneType
* autopep8
* improve printout
* fix comment
* Docs: fix all the warnings
* better format + new option --Parameters
* protect against exception opening XML summary

[v9r1p18]
use DIRAC v6r19p23

* fix for v6r19p22

[v9r1p17]
use DIRAC v6r19p22

* remove useless code
* protect against no site for SE
* fix printout
* fix variable names
* fix wildcard processing pass if all file types are given

[v9r1p16]
use DIRAC v6r19p21

* added comment
* style
* need to specify fully the branch
* using (correct) tag instead of branch)
* adding openssl and PYCURL_SSL_LIBRARY variable
* change the software deployment URL

[v9r1p15]
use DIRAC v6r19p21

* increase the size of the Conditions column
* no files to add is not an error
* unused import
* fix logging
* use shell to execute command
* log error in command
* replace os.popen() with subprocess.check_output()
* revert loop on event type and productions
* print -> gLogger and retry BK queries
* a bit of code cleaning
* fix small problem when debugging DestroyDataset transformation
* accept transitions from Problematic
* add printout for long queries

[v9r1p14]
use DIRAC v6r19p21

* fix visibility for removal transformations
* increase the size of the file type
* fix getMaxFilesToReplicate (disabling throttling to tape SEs)
* print BK query timing in all cases
* make a single query for a list of prods or event types
* avoid nDatasets==0
* ignore empty lines

[v9r1p13]
use DIRAC v6r19p21

* boinc docs, config template ReqProxy, generic hostname placeholder
* TS: correct cast to set to fix exception in the ReplicateToLocalSE plugin
* Boinc todo update, find old files in the SE
* dirac.cfg template updated, changes in REA section
* additions to the BOINC how-to
* add new plugin name to set files invisible
* boinc docs correction and additions
* fix files count in getRanges