@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p20
+  {
+    Modules = LHCbDIRAC:v9r1p20, LHCbWebDIRAC:v4r4p6
+    Depends = DIRAC:v6r19p25
+    LcgVer = v13r0
+  }
+
   v9r1p19
   {
     Modules = LHCbDIRAC:v9r1p19, LHCbWebDIRAC:v4r4p6
