@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r1p19",
+  "version": "v9r1p20",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r19p24",
+      [ "Dirac", "v6r19p25",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v13r0",
