@@ -1,3 +1,8 @@
+[v9r1p20]
+use DIRAC v6r19p25
+
+* CI: adapt gitlab-ci.yml to Runner v11
+
 [v9r1p19]
 use DIRAC v6r19p24
 
